# gate

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  gate.data  gate.html  gate.js  gate.wasm  index.html  script.js  site.webmanifest
.github/workflows/: deploy.yaml
Gear/: CMakeLists.txt
Gear/include/Gear/: Application.hpp  Core.hpp  Gear.hpp  Window.hpp
Gear/include/Gear/Core/: Assert.hpp  KeyCode.hpp  Log.hpp  Type.hpp
Gear/src/: Application.cpp  Core.cpp  Window.cpp
Gear/src/Core/: Log.cpp
GearBox/: CMakeLists.txt
GearBox/src/: main.cpp
assets/: materials.json
assets/2D/shaders/: Circle.glsl  Quad.glsl
assets/3D/: materials.json
assets/3D/shaders/: EquirectangularToCubemap.glsl  FlatColor.glsl  Geometry.glsl  Outline.glsl  PostProcessing.glsl  Skybox.glsl  SpotLight.glsl
assets/materials/: materials.meta.json
assets/scenes/: default.scene.json
assets/shaders/: Light.glsl  LightMap.glsl  LightMap2.glsl  Outline.glsl  PointLight.glsl  PostProcessing.glsl  Skybox.glsl  SpotLight.glsl  Texture.fs  Texture.glsl
assets/shaders/Bloom/: Downsample.glsl  Final.glsl  PreFilter.glsl  Upsample.glsl
assets/shaders/renderer/: Circle.glsl  Quad.glsl
assets/shaders/renderer/primitives/: quad.fs  quad.vs
assets/themes/: default.json
docs/: presentation.pptx  report.docx  url_to_wiki.txt
examples/: 1-bit-full-adder.json  4-bit-full-adder.json  8-bit-full-adder.json  aggregate.json  nand-gate.json  or-gate.json  xor-gate.json
include/: VertexArray.hpp  VertexBuffer.hpp
include/Core/: KeyCode.hpp  Log.hpp  Type.hpp
res/shaders/: FlatColor.fs  FlatColor.vs  Texture.fs  Texture.vs
res/shaders/renderer/primitives/: quad.fs  quad.vs
scripts/: build_web.sh  setup_emscripten_sdk.sh
src/: Application.cpp  Application.hpp  EditorLayer.cpp  EditorLayer.hpp  Game.hpp  IndexBuffer.cpp  Main.cpp  Shader.cpp  Shader.hpp  Texture.cpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  main.cpp
src/Core/: Assert.cpp  Assert.hpp  Base.hpp  Color.cpp  Color.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Log.cpp  Log.hpp  Macro.cpp  Macro.hpp  Macros.cpp  Math.hpp  OpenGL.hpp  Timestep.cpp  Timestep.hpp  Type.hpp
src/Debug/: Profiler.cpp  Profiler.hpp
src/Ecs/: Component.cpp  Component.hpp  ComponentPool.cpp  ComponentPool.hpp  Ecs.cpp  Ecs.hpp  Entity.hpp
src/Editor/: Board.cpp  Board.hpp  Chip.cpp  Chip.hpp  Component.cpp  Component.hpp  Components.hpp  Config.cpp  Config.hpp  Connection.hpp  EditorLayer.cpp  EditorLayer.hpp  Line.hpp  Pin.cpp  Pin.hpp  Point.cpp  Point.hpp  Wire.cpp  Wire.hpp
src/Editor/Components/: AndComponent.cpp  AndComponent.hpp  ChipComponent.cpp  ChipComponent.hpp  Component.cpp  Component.hpp  NotComponent.cpp  NotComponent.hpp  OrComponent.cpp  OrComponent.hpp  OutputComponent.cpp  OutputComponent.hpp  SwitchComponent.cpp  SwitchComponent.hpp  XorComponent.cpp  XorComponent.hpp
src/Events/: Event.cpp  Event.hpp  FileDropEvent.hpp  KeyCode.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/Layers/: EditorLayer.cpp  EditorLayer.hpp  ExampleLayer.cpp  ExampleLayer.hpp  GameLayer.cpp  GameLayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  UILayer.cpp  UILayer.hpp
src/Physics/: AABB.cpp  AABB.hpp  BoundingSphere.cpp  BoundingSphere.hpp  Collider.cpp  Collider.hpp  Engine.cpp  Engine.hpp  Intersection.hpp  Plane.cpp  Plane.hpp
src/Renderer/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Resource/: Factory.hpp  Manager.cpp  Manager.hpp  Mesh.cpp  Mesh.hpp  Resource.cpp  Resource.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/Scene/: Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/Serializer/: Serializer.cpp  Serializer.hpp
src/Themes/: Settings.cpp  Settings.hpp
src/Ui/: Ui.cpp  Ui.hpp
src/Utils/: Color.hpp  File.cpp  File.hpp  String.cpp  String.hpp
src/Utils/Memory/: BumpAllocator.cpp  BumpAllocator.hpp
src/Utils/Parsing/: Lexer.cpp  Lexer.hpp
web/: index.html  script.js  style.css
